# backend/services/auth/docs/swagger.json
@@ -60,9 +60,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "JWT token",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/controller.AuthLoginHandlerOut"
                         }
                     },
                     "400": {
@@ -107,6 +107,34 @@
                 "password": {
                     "type": "string",
                     "maxLength": 150
+                }
+            }
+        },
+        "controller.AuthLoginHandlerOut": {
+            "type": "object",
+            "properties": {
+                "auth_user_data": {
+                    "$ref": "#/definitions/controller.AuthLoginHandlerOutUserData"
+                },
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "controller.AuthLoginHandlerOutUserData": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "surname": {
+                    "type": "string"
                 }
             }
         },
