# backend/services/auth/internal/delivery/http/controller/auth_login.go
@@ -2,6 +2,7 @@ package controller
 
 import (
 	"github.com/gofiber/fiber/v2"
+	"github.com/google/uuid"
 	"github.com/m11ano/e"
 	"github.com/m11ano/mipt-webdev-course/backend/services/auth/internal/delivery/http/validation"
 )
@@ -9,6 +10,18 @@ import (
 type AuthLoginHandlerIn struct {
 	Email    string `json:"email" validate:"required,email,max=150"`
 	Password string `json:"password" validate:"required,max=150"`
+}
+
+type AuthLoginHandlerOutUserData struct {
+	ID      uuid.UUID `json:"id"`
+	Name    string    `json:"name"`
+	Surname string    `json:"surname"`
+	Email   string    `json:"email"`
+}
+
+type AuthLoginHandlerOut struct {
+	Token        string                      `json:"token"`
+	AuthUserData AuthLoginHandlerOutUserData `json:"auth_user_data"`
 }
 
 func (ctrl *Controller) AuthLoginHandlerValidate(in *AuthLoginHandlerIn) (isOk bool, errMsg []string) {
@@ -22,7 +35,7 @@ func (ctrl *Controller) AuthLoginHandlerValidate(in *AuthLoginHandlerIn) (isOk b
 // @Tags auth
 // @Accept  json
 // @Param request body AuthLoginHandlerIn true "JSON"
-// @Success 200 {string} string "JWT token"
+// @Success 200 {object} AuthLoginHandlerOut
 // @Failure 400 {object} middleware.ErrorJSON
 // @Router /auth/login [post]
 func (ctrl *Controller) AuthLoginHandler(c *fiber.Ctx) error {
@@ -37,7 +50,7 @@ func (ctrl *Controller) AuthLoginHandler(c *fiber.Ctx) error {
 		return e.NewErrorFrom(e.ErrBadRequest).AddDetails(errMsg)
 	}
 
-	jwtToken, err := ctrl.authUC.Login(c.Context(), in.Email, in.Password)
+	jwtToken, account, err := ctrl.authUC.Login(c.Context(), in.Email, in.Password)
 	if err != nil {
 		if isAppErr, appErr := e.IsAppError(err); isAppErr {
 			return appErr
@@ -45,5 +58,15 @@ func (ctrl *Controller) AuthLoginHandler(c *fiber.Ctx) error {
 		return e.ErrInternal
 	}
 
-	return c.JSON(jwtToken)
+	out := AuthLoginHandlerOut{
+		Token: jwtToken,
+		AuthUserData: AuthLoginHandlerOutUserData{
+			ID:      account.ID,
+			Name:    account.Name,
+			Surname: account.Surname,
+			Email:   account.Email,
+		},
+	}
+
+	return c.JSON(out)
 }
